# LymphoMNIST

./: .gitignore  LICENSE  README.md  pyproject.toml  requirement.txt  setup.py
LymphoMNIST/: LymphoMNIST.py  __init__.py  info.py  utils.py
examples/: tutorial.ipynb
tests/: test_lymphomnist.py
